Renamed from scidev to sciflow

--- a/nbs/nb_lint.ipynb
+++ b/nbs/nb_lint.ipynb
@@ -11,22 +11,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "from pathlib import Path\n",
-    "\n",
-    "from fastcore.script import call_parse\n",
-    "from nbqa.__main__ import _get_configs, _run_on_one_root_dir\n",
-    "from nbqa.cmdline import CLIArgs\n",
-    "from nbqa.find_root import find_project_root"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -47,6 +31,22 @@
     "> nbqa pylint my_notebook.ipynb --disable=C0114\n",
     "> nbqa pyupgrade my_notebook.ipynb --py36-plus --nbqa-mutate\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "from pathlib import Path\n",
+    "\n",
+    "from fastcore.script import call_parse\n",
+    "from nbqa.__main__ import _get_configs, _run_on_one_root_dir\n",
+    "from nbqa.cmdline import CLIArgs\n",
+    "from nbqa.find_root import find_project_root"
    ]
   },
   {
@@ -86,7 +86,7 @@
     "import os\n",
     "\n",
     "project_root: Path = find_project_root(tuple([str(Path(\".\").resolve())]))\n",
-    "assert os.path.basename(project_root) == \"scidev\""
+    "assert os.path.basename(project_root) == \"sciflow\""
    ]
   },
   {
@@ -99,7 +99,7 @@
     "\n",
     "\n",
     "@call_parse\n",
-    "def scidev_tidy():\n",
+    "def sciflow_tidy():\n",
     "    \"Run notebook formatting and tidy utilities. \\\n",
     "    These tools should be configured to run automatically without intervention.\"\n",
     "    tidy_tools = [\"black\", \"isort\", \"autoflake\"]\n",
