--- a/nbs/packaging.ipynb
+++ b/nbs/packaging.ipynb
@@ -40,24 +40,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Need to generate meta.yaml from settings.ini "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export ARTIFACTORY_USER=..\n",
-    "#export ARTIFACTORY_PASSWORD=..\n",
-    "#export ARTIFACTORY_URL=ndartifactory.jfrog.io\n",
-    "#export ARTIFACTORY_CONDA_CHANNEL=conda-local"
+    "# Artifactory Environment Variables for conda\n",
+    "\n",
+    "* export ARTIFACTORY_USER=..\n",
+    "* export ARTIFACTORY_PASSWORD=..\n",
+    "* export ARTIFACTORY_URL=ndartifactory.jfrog.io\n",
+    "* export ARTIFACTORY_CONDA_CHANNEL=conda-local"
    ]
   },
   {
@@ -75,6 +66,25 @@
     "from typing import List\n",
     "\n",
     "from nbdev.export import Config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Need to generate meta.yaml from settings.ini"
    ]
   },
   {
@@ -239,19 +249,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_requirements(output_filename: str = 'settings-generated.ini'):\n",
+    "def update_requirements(output_filename: str = \"settings-generated.ini\"):\n",
     "    config = ConfigParser(delimiters=[\"=\"])\n",
     "    settings_path = os.path.join(Config().path(\"lib_path\"), \"settings.ini\")\n",
     "    config.read(settings_path)\n",
-    "    \n",
-    "    generated_reqs_path = os.path.join(Path(\".\").resolve().parent, \"requirements-generated.txt\")\n",
+    "\n",
+    "    generated_reqs_path = os.path.join(\n",
+    "        Path(\".\").resolve().parent, \"requirements-generated.txt\"\n",
+    "    )\n",
     "    determine_dependencies()\n",
     "    reqs_str = reqs_file_to_sep_str(generated_reqs_path)\n",
     "    os.remove(generated_reqs_path)\n",
-    "    \n",
-    "    out_path = os.path.join(Path(\".\").resolve().parent, output_filename)\n",
+    "\n",
+    "    os.path.join(Path(\".\").resolve().parent, output_filename)\n",
     "    config.set(\"DEFAULT\", \"requirements\", reqs_str)\n",
-    "    \n",
+    "\n",
     "    with open(new_settings_path, \"w\") as configfile:\n",
     "        config.write(configfile)"
    ]
@@ -269,9 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "# Writing our configuration file to 'example.ini'\n"
+    "# Writing our configuration file to 'example.ini'"
    ]
   },
   {
