--- a/nbs/params.ipynb
+++ b/nbs/params.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,22 +20,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "from pathlib import Path\n",
-    "\n",
-    "import nbformat\n",
-    "from nbdev.export import (Config, find_default_export, nbglob, params_cell,\n",
-    "                          read_nb)\n",
-    "from nbformat.notebooknode import NotebookNode"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -46,7 +30,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import nbformat\n",
+    "from nbdev.export import Config, find_default_export, nbglob, read_nb\n",
+    "from nbformat.notebooknode import NotebookNode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Skipping /home/jovyan/git/scidev/examples/top2vec.ipynb already has parameters cell\n"
+      "Skipping /home/jovyan/git/sciflow/examples/top2vec.ipynb already has parameters cell\n"
      ]
     }
    ],
@@ -143,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
