Added named export functions

--- a/examples/top2vec.ipynb
+++ b/examples/top2vec.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# exportn_step:prepproc\n",
+    "\n",
+    "def prepproc():\n",
+    "    print(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -230,7 +242,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# exportn_step:preprocess\n",
+    "\n",
     "def preprocess(dremio_access, model_level, min_date, traffic_percent):\n",
     "    data = get_utterances(dremio_access, model_level, min_date, traffic_percent)\n",
     "    button_filter = get_button_responses_filter(dremio_access)\n",
