--- a/examples/top2vec.ipynb
+++ b/examples/top2vec.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exportn_step:prepproc\n",
+    "# exportn_step:first\n",
     "\n",
-    "def prepproc():\n",
-    "    print(1)"
+    "import pandas as pd"
    ]
   },
   {
